fix: color to background color

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     font-family: Verdana, 'Dejavu Sans', sans-serif;
-    color: rgb(255, 192, 203);
+    background-color: rgb(255, 192, 203);
 }
 
 .odd,
