--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,11 @@
 /* Add CSS Styling */
+.avatar.proportioned{
+    height: auto;
+    width: 300px;
+}
+
+.avatar.distorted{
+    aspect-ratio: 1/2;
+    width: 200px;
+    height: auto;
+}
