--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,45 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 .card {
-  width: 400px;
+  width: 600px;
   background: #fff;
-  margin: 16px auto;
+  margin: 0px auto;
+  padding-top: 20px;
+  padding-bottom: 12px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 0;
+  padding: 10px;
+  margin: 12px;
 }
 
 .content {
   background: #e3f4ff;
+  font-size: 24px;
+  padding: 10px;
+  margin: 12px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 12px;
+  margin-bottom: 0;
+  font-size: 24px;
+  text-align: center;
+  padding: 10px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  font-size: 22px;
+  display: block;
+  padding: 10px;
+  margin: auto;
 }
