--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,12 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding: 0px 20px; /* Aggiungi padding ai lati */
+  margin: 0px; /* Assicurati che non ci siano margini */
+  align-items: center;
+  justify-content: space-between;
+  min-width: 400px;
 }
 
 .logo {
@@ -9,17 +15,23 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  align-content: center;
+  margin: 12px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin: 4px;
   /* this removes the line under the links */
   text-decoration: none;
 }
