--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  margin: 10px;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -20,6 +23,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin: 10px;
 }
 
 .logo {
@@ -27,6 +31,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 10px;
 }
 
 button {
@@ -45,4 +50,24 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 10px;
+  padding: 0;
+  
+}
+
+li{
+  margin: 10px;
+}
+
+.container1{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.container2{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
