--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -7,19 +7,22 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
 }
 
 img {
   width: 600px;
+  padding: 20px;
 }
 
 a {
   text-decoration: none;
+  color: grey;
 }
 
 ul {
   list-style: none;
+  padding:  0 10px;
 }
 
 button {
@@ -27,6 +30,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
+  margin: 15px 5px;
 }
 
 input {
@@ -38,19 +43,31 @@ input {
 
 .header {
   display: flex;
+  justify-content: space-between;
 }
 
 .left-links {
   display: flex;
 }
 
+.right-links {
+  display: flex;
+}
+
 li {
-  padding: 10px;
+  padding: 0 10px;
 }
 
 .content {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: lightgrey;
   align-items: center;
 }
 
